--- a/html/mednote/doctor/profile.html
+++ b/html/mednote/doctor/profile.html
@@ -97,6 +97,25 @@
                     <input type="text" class="an-form-control" placeholder="">
                   </p>
                 </div>
+
+                <div class="col-md-6 pad-left">
+                  <div class="info-single">
+                    <p class="light required">First Name</p>
+                    <p>
+                      <input type="text" class="an-form-control" placeholder="">
+                    </p>
+                  </div>
+                </div>
+                <div class="col-md-6 pad-right">
+                  <div class="info-single">
+                    <p class="light">Last Name</p>
+                    <p>
+                      <input type="text" class="an-form-control" placeholder="">
+                    </p>
+                  </div>
+                </div>
+
+
                 <div class="col-md-6 pad-left">
                   <div class="info-single">
                     <p class="light required">Sex</p>
